--- a/app/src/main/res/layout/item_record_note.xml
+++ b/app/src/main/res/layout/item_record_note.xml
@@ -27,6 +27,7 @@
         tools:text="Name" />
 
     <ImageView
+        android:id="@+id/isLike_label"
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:layout_alignParentRight="true"
