--- a/app/src/main/res/layout/item_record.xml
+++ b/app/src/main/res/layout/item_record.xml
@@ -44,6 +44,7 @@
     </LinearLayout>
 
     <ImageView
+        android:id="@+id/isLike_label"
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:layout_alignParentRight="true"
