--- a/app/src/main/res/layout/nav_main.xml
+++ b/app/src/main/res/layout/nav_main.xml
@@ -12,5 +12,6 @@
     android:textStyle="bold"
     android:gravity="center"
     android:layout_marginTop="36dp"
-    android:layout_marginBottom="36dp"
+    android:layout_marginBottom="36dp">
+</TextView>
 </LinearLayout>
