--- a/app/src/main/res/layout/set_password_fragment.xml
+++ b/app/src/main/res/layout/set_password_fragment.xml
@@ -6,7 +6,7 @@
     android:orientation="vertical"
     android:layout_marginLeft="@dimen/default_margin"
     android:layout_marginRight="@dimen/default_margin"
-    tools:context=".ui.login.SetPassword">
+    tools:context=".ui.login.fragment.SetPassword">
 
     <TextView
         android:layout_width="wrap_content"
@@ -47,7 +47,7 @@
         android:drawableRight="@drawable/ic_eye"/>
 
     <Button
-        android:id="@+id/login"
+        android:id="@+id/save_pass_btn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="31dp"
