--- a/app/src/main/res/layout/verify_code_fragment.xml
+++ b/app/src/main/res/layout/verify_code_fragment.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".ui.login.VerifyCode">
+    tools:context=".ui.login.fragment.VerifyCode">
 
     <TextView
         android:layout_width="wrap_content"
