--- a/app/src/main/res/navigation/login_navigation.xml
+++ b/app/src/main/res/navigation/login_navigation.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/enterEmail"
-        android:name="com.example.passkeeper.ui.login.EnterEmail"
+        android:name="com.example.passkeeper.ui.login.fragment.EnterEmail"
         android:label="EnterEmail" >
         <action
             android:id="@+id/action_enterEmail_to_verifyCode"
@@ -15,7 +15,7 @@
     </fragment>
     <fragment
         android:id="@+id/verifyCode"
-        android:name="com.example.passkeeper.ui.login.VerifyCode"
+        android:name="com.example.passkeeper.ui.login.fragment.VerifyCode"
         android:label="verify_code_fragment"
         tools:layout="@layout/verify_code_fragment" >
         <action
@@ -24,7 +24,7 @@
     </fragment>
     <fragment
         android:id="@+id/setPassword"
-        android:name="com.example.passkeeper.ui.login.SetPassword"
+        android:name="com.example.passkeeper.ui.login.fragment.SetPassword"
         android:label="set_password_fragment"
         tools:layout="@layout/set_password_fragment" />
 </navigation>
