[ADD] basic data (have bug)

--- a/app/src/main/res/navigation/main_navigation.xml
+++ b/app/src/main/res/navigation/main_navigation.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/nav_all"
-        android:name="com.example.passkeeper.ui.listRecord.listRecord"
+        android:name="com.example.passkeeper.ui.listRecord.ListRecordFragment"
         android:label="All"
         tools:layout="@layout/list_record_fragment" >
         <argument
@@ -18,7 +18,7 @@
 
     <fragment
         android:id="@+id/nav_password"
-        android:name="com.example.passkeeper.ui.listRecord.listRecord"
+        android:name="com.example.passkeeper.ui.listRecord.ListRecordFragment"
         android:label="Password"
         tools:layout="@layout/list_record_fragment">
         <argument
@@ -29,7 +29,7 @@
 
     <fragment
         android:id="@+id/nav_card"
-        android:name="com.example.passkeeper.ui.listRecord.listRecord"
+        android:name="com.example.passkeeper.ui.listRecord.ListRecordFragment"
         android:label="Card"
         tools:layout="@layout/list_record_fragment">
         <argument
@@ -40,7 +40,7 @@
 
     <fragment
         android:id="@+id/nav_note"
-        android:name="com.example.passkeeper.ui.listRecord.listRecord"
+        android:name="com.example.passkeeper.ui.listRecord.ListRecordFragment"
         android:label="Note"
         tools:layout="@layout/list_record_fragment">
         <argument
