Update ListRecordViewModel + RecordAdapter

--- a/app/src/main/res/layout/item_record_password.xml
+++ b/app/src/main/res/layout/item_record_password.xml
@@ -33,7 +33,7 @@
             tools:text="Name" />
 
         <TextView
-            android:id="@+id/username_text_view"
+            android:id="@+id/description_text_view"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
