[FIX] login with wrapper

--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -24,4 +24,9 @@
             android:title="@string/note" />
     </group>
 
+    <group>
+        <item
+            android:id="@+id/log_out"
+            android:title="Log out" />
+    </group>
 </menu>
