--- a/app/src/main/res/layout/list_record_fragment.xml
+++ b/app/src/main/res/layout/list_record_fragment.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        tools:listitem="@layout/item_record_password"/>
+        tools:listitem="@layout/item_record"/>
 
     <com.leinardi.android.speeddial.SpeedDialOverlayLayout
         android:id="@+id/overlay"
