--- a/app/src/main/res/layout/set_password_fragment.xml
+++ b/app/src/main/res/layout/set_password_fragment.xml
@@ -4,14 +4,12 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:layout_marginLeft="@dimen/default_margin"
-    android:layout_marginRight="@dimen/default_margin"
     tools:context=".ui.login.fragment.SetPassword">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="New password"
+        android:text="@string/new_password"
         android:textStyle="bold"
         android:textSize="18sp"
         android:textColor="#9A9A9A"
@@ -21,16 +19,18 @@
         android:id="@+id/new_password_input"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Password"
-        android:textSize="18sp"
-        android:textColorHint="#D38F8E8E"
         android:layout_marginTop="8dp"
-        android:drawableRight="@drawable/ic_eye"/>
+        android:autofillHints="password"
+        android:drawableEnd="@drawable/ic_eye"
+        android:hint="@string/password"
+        android:inputType="textPassword"
+        android:textColorHint="#D38F8E8E"
+        android:textSize="18sp" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Re-enter password"
+        android:text="@string/re_enter_password"
         android:textStyle="bold"
         android:textSize="18sp"
         android:textColor="#9A9A9A"
@@ -40,11 +40,13 @@
         android:id="@+id/re_enter_password_input"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Password"
-        android:textSize="18sp"
-        android:textColorHint="#D38F8E8E"
         android:layout_marginTop="8dp"
-        android:drawableRight="@drawable/ic_eye"/>
+        android:autofillHints="password"
+        android:drawableEnd="@drawable/ic_eye"
+        android:hint="@string/password"
+        android:inputType="textPassword"
+        android:textColorHint="#D38F8E8E"
+        android:textSize="18sp" />
 
     <Button
         android:id="@+id/save_pass_btn"
@@ -52,7 +54,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="31dp"
         android:background="@drawable/bg_button"
-        android:text="Save password"
+        android:text="@string/save_password"
         android:textColor="@color/white" />
 
 </LinearLayout>
