--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:text="Passkeeper"
+        android:text="@string/app_name"
         android:textStyle="bold"
         android:textSize="48sp"
         android:textColor="#0077B6"
