--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -6,8 +6,8 @@
 <TextView
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:text="@string/appName"
-    android:textSize="36dp"
+    android:text="@string/app_name"
+    android:textSize="36sp"
     android:textColor="#FFFFFF"
     android:textStyle="bold"
     android:gravity="center"
