--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginLeft="20dp"
-    android:layout_marginRight="20dp"
+    android:paddingLeft="20dp"
+    android:paddingRight="20dp"
     android:orientation="vertical">
 
     <TextView
@@ -41,15 +41,18 @@
         android:textSize="18sp"
         android:textColor="#9A9A9A"
         android:layout_marginTop="24dp"/>
+
+
     <EditText
         android:id="@+id/password_input"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_marginTop="8dp"
         android:hint="Password"
         android:textSize="18sp"
         android:textColorHint="#D38F8E8E"
-        android:layout_marginTop="8dp"
-        android:drawableRight="@drawable/ic_eye"/>
+        android:inputType="textPassword"
+        android:drawableRight="@drawable/ic_show_password"/>
 
     <Button
         android:id="@+id/login"
