--- a/app/src/main/res/layout/set_password_fragment.xml
+++ b/app/src/main/res/layout/set_password_fragment.xml
@@ -25,7 +25,7 @@
         android:textSize="18sp"
         android:textColorHint="#D38F8E8E"
         android:layout_marginTop="8dp"
-        android:drawableRight="@drawable/ic_eye"/>
+        android:drawableRight="@drawable/ic_show_password"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -44,7 +44,7 @@
         android:textSize="18sp"
         android:textColorHint="#D38F8E8E"
         android:layout_marginTop="8dp"
-        android:drawableRight="@drawable/ic_eye"/>
+        android:drawableRight="@drawable/ic_show_password"/>
 
     <Button
         android:id="@+id/save_pass_btn"
