[FIX] Update review

--- a/app/src/main/res/layout/set_password_fragment.xml
+++ b/app/src/main/res/layout/set_password_fragment.xml
@@ -21,7 +21,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:autofillHints="password"
-        android:drawableEnd="@drawable/ic_eye"
+        android:drawableEnd="@drawable/ic_show_password"
         android:hint="@string/password"
         android:inputType="textPassword"
         android:textColorHint="#D38F8E8E"
@@ -42,7 +42,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:autofillHints="password"
-        android:drawableEnd="@drawable/ic_eye"
+        android:drawableEnd="@drawable/ic_show_password"
         android:hint="@string/password"
         android:inputType="textPassword"
         android:textColorHint="#D38F8E8E"
