--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -41,17 +41,14 @@
         android:textSize="18sp"
         android:textColor="#9A9A9A"
         android:layout_marginTop="24dp"/>
-
-
     <EditText
         android:id="@+id/password_input"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="8dp"
+        android:layout_height="wrap_content"
         android:hint="Password"
         android:textSize="18sp"
         android:textColorHint="#D38F8E8E"
-        android:inputType="textPassword"
+        android:layout_marginTop="8dp"
         android:drawableRight="@drawable/ic_show_password"/>
 
     <Button
