[Password Generator] - [Add constraints between option widgets]

--- a/app/src/main/res/layout/activity_generate_password.xml
+++ b/app/src/main/res/layout/activity_generate_password.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginLeft="20dp"
-    android:layout_marginRight="20dp"
+    android:paddingLeft="20dp"
+    android:paddingRight="20dp"
     android:orientation="vertical"
     tools:context=".ui.generatePass.GeneratePasswordActivity">
 
@@ -60,7 +60,17 @@
         android:textColor="@color/black">
     </TextView>
 
+    <TextView
+        android:id="@+id/txvLengthValue"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="value"
+        android:textAlignment="center"
+        android:textColor="#0077B6">
+    </TextView>
+
     <SeekBar
+        android:id="@+id/sbrLength"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
@@ -95,8 +105,10 @@
                 android:orientation="horizontal"
                 android:gravity="right">
                 <Switch
+                    android:id="@+id/swtUppercase"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:checked="true">
                 </Switch>
             </LinearLayout>
         </LinearLayout>
@@ -119,8 +131,10 @@
                 android:orientation="horizontal"
                 android:gravity="right">
                 <Switch
+                    android:id="@+id/swtNumber"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:checked="true">
                 </Switch>
             </LinearLayout>
         </LinearLayout>
@@ -143,8 +157,10 @@
                 android:orientation="horizontal"
                 android:gravity="right">
                 <Switch
+                    android:id="@+id/swtLowercase"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:checked="true">
                 </Switch>
             </LinearLayout>
         </LinearLayout>
@@ -168,8 +184,10 @@
                 android:orientation="horizontal"
                 android:gravity="right">
                 <Switch
+                    android:id="@+id/swtSpecial"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:checked="true">
                 </Switch>
             </LinearLayout>
         </LinearLayout>
@@ -196,6 +214,7 @@
             android:orientation="horizontal"
             android:gravity="right">
             <com.travijuu.numberpicker.library.NumberPicker
+                android:id="@+id/npkMinNumber"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:min="1"
@@ -226,11 +245,12 @@
             android:orientation="horizontal"
             android:gravity="right">
             <com.travijuu.numberpicker.library.NumberPicker
+                android:id="@+id/npkMinSpecial"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:min="1"
                 app:value="5">
-                <!--                app:custom_layout="@layout/number_picker_custom_layout">-->
+<!--                app:custom_layout="@layout/number_picker_custom_layout">-->
             </com.travijuu.numberpicker.library.NumberPicker>
         </LinearLayout>
     </LinearLayout>
