--- a/app/src/main/res/layout/activity_generate_password.xml
+++ b/app/src/main/res/layout/activity_generate_password.xml
@@ -14,9 +14,15 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
-        android:hint="Generated Password"
         android:textAlignment="center"
-        android:textSize="30sp">
+        android:textSize="30sp"
+        android:textColor="@color/black"
+        android:singleLine="true"
+        android:ellipsize="marquee"
+        android:marqueeRepeatLimit ="marquee_forever"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
+        android:scrollHorizontally="true">
     </TextView>
 
     <View
