[Password Generator] - [Refactor code]

--- a/app/src/main/res/layout/activity_generate_password.xml
+++ b/app/src/main/res/layout/activity_generate_password.xml
@@ -36,7 +36,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
         android:background="@drawable/bg_button"
-        android:text="Generate Password"
+        android:text="@string/generate_password"
         android:textColor="@color/white"/>
 
     <Button
@@ -45,13 +45,13 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
         android:background="@drawable/bg_gray_button"
-        android:text="Copy"/>
+        android:text="@string/copy"/>
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="45dp"
-        android:text="OPTIONS"
+        android:text="@string/options"
         android:textAlignment="center"
         android:textSize="22sp"
         android:textColor="@color/black">
@@ -61,7 +61,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:text="Length"
+        android:text="@string/length"
         android:textSize="16sp"
         android:textColor="@color/black">
     </TextView>
@@ -70,7 +70,7 @@
         android:id="@+id/txvLengthValue"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="value"
+        android:text="@string/value"
         android:textAlignment="center"
         android:textColor="#0077B6">
     </TextView>
@@ -101,7 +101,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
-                android:text="A-Z"
+                android:text="@string/A_Z"
                 android:textSize="16sp"
                 android:textColor="@color/black">
             </TextView>
@@ -109,7 +109,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:gravity="right">
+                android:gravity="end">
                 <Switch
                     android:id="@+id/swtUppercase"
                     android:layout_width="wrap_content"
@@ -122,12 +122,12 @@
             android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:layout_gravity="right">
+            android:layout_gravity="end">
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
-                android:text="0-9"
+                android:text="@string/_0_9"
                 android:textSize="16sp"
                 android:textColor="@color/black">
             </TextView>
@@ -135,7 +135,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:gravity="right">
+                android:gravity="end">
                 <Switch
                     android:id="@+id/swtNumber"
                     android:layout_width="wrap_content"
@@ -153,7 +153,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
-                android:text="a-z"
+                android:text="@string/a_z"
                 android:textSize="16sp"
                 android:textColor="@color/black">
             </TextView>
@@ -161,7 +161,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:gravity="right">
+                android:gravity="end">
                 <Switch
                     android:id="@+id/swtLowercase"
                     android:layout_width="wrap_content"
@@ -174,13 +174,13 @@
             android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:layout_gravity="right"
+            android:layout_gravity="end"
             android:layout_marginTop="10dp">
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
-                android:text="!@#"
+                android:text="@string/specialChar"
                 android:textSize="16sp"
                 android:textColor="@color/black">
             </TextView>
@@ -188,7 +188,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:gravity="right">
+                android:gravity="end">
                 <Switch
                     android:id="@+id/swtSpecial"
                     android:layout_width="wrap_content"
@@ -210,7 +210,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:text="Minimum Number"
+            android:text="@string/minimum_number"
             android:textSize="16sp"
             android:textColor="@color/black">
         </TextView>
@@ -218,7 +218,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:gravity="right">
+            android:gravity="end">
             <com.travijuu.numberpicker.library.NumberPicker
                 android:id="@+id/npkMinNumber"
                 android:layout_width="wrap_content"
@@ -241,7 +241,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:text="Minimum Special"
+            android:text="@string/minimum_special"
             android:textSize="16sp"
             android:textColor="@color/black">
         </TextView>
@@ -249,7 +249,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:gravity="right">
+            android:gravity="end">
             <com.travijuu.numberpicker.library.NumberPicker
                 android:id="@+id/npkMinSpecial"
                 android:layout_width="wrap_content"
