--- a/app/src/main/res/layout/item_record.xml
+++ b/app/src/main/res/layout/item_record.xml
@@ -3,31 +3,32 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="60dp"
+    android:layout_height="@dimen/item_height"
     android:orientation="horizontal">
 
     <ImageView
         android:id="@+id/iconTypeRecord"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
+        android:layout_width="@dimen/icon_size"
+        android:layout_height="@dimen/icon_size"
         android:src="@drawable/ic_card"
-        android:padding="14dp"/>
+        android:padding="@dimen/default_padding"
+        android:contentDescription="@string/icon" />
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="88dp"
+        android:layout_height="match_parent"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
         android:layout_alignParentTop="true"
-        android:layout_toRightOf="@id/iconTypeRecord"
-        android:orientation="vertical">
+        android:layout_toEndOf="@id/iconTypeRecord"
+        android:orientation="vertical" >
 
         <TextView
             android:id="@+id/name_record_text_view"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
-            android:gravity="bottom"
+            android:gravity="center_vertical"
             android:textAppearance="?android:textAppearanceMedium"
             android:textColor="@android:color/black"
             tools:text="Name" />
@@ -40,23 +41,17 @@
             android:gravity="top"
             android:textAppearance="?android:textAppearanceMedium"
             android:textColor="#9A9A9A"
-            tools:text="User's fullname" />
+            tools:text="Description" />
     </LinearLayout>
 
     <ToggleButton
         android:id="@+id/favorite_toggle"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_alignParentRight="true"
+        android:layout_width="@dimen/fav_size"
+        android:layout_height="@dimen/fav_size"
+        android:layout_alignParentEnd="true"
         android:layout_centerVertical="true"
-        android:layout_margin="14dp"
+        android:layout_margin="@dimen/default_padding"
         android:textOff=""
         android:textOn=""
         android:background="@drawable/favorite_toggle"/>
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="?android:attr/selectableItemBackground"/>
-
 </RelativeLayout>
