--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -26,6 +26,12 @@
 
     <group>
         <item
+            android:id="@+id/manage_group"
+            android:title="Manage Group" />
+    </group>
+
+    <group>
+        <item
             android:id="@+id/log_out"
             android:title="Log out" />
     </group>
