--- a/app/src/main/res/layout/activity_list_group.xml
+++ b/app/src/main/res/layout/activity_list_group.xml
@@ -7,10 +7,26 @@
     android:layout_height="match_parent"
     tools:context=".ui.listGroup.ListGroupActivity">
 
+    <com.google.android.material.appbar.AppBarLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:theme="@style/Theme.Passkeeper.AppBarOverlay">
+        <androidx.appcompat.widget.Toolbar
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary"
+            app:popupTheme="@style/Theme.Passkeeper.PopupOverlay"
+            app:title="Group"
+            app:titleMarginStart="30dp"
+            app:logo="@drawable/ic_arrow_back">
+        </androidx.appcompat.widget.Toolbar>
+    </com.google.android.material.appbar.AppBarLayout>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginTop="@dimen/item_height"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         tools:listitem="@layout/item_group"/>
 
