--- a/app/src/main/res/layout/item_group.xml
+++ b/app/src/main/res/layout/item_group.xml
@@ -8,7 +8,7 @@
 
     <TextView
         android:id="@+id/name_group_text_view"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="@dimen/item_height"
         android:gravity="center_vertical"
         android:textColor="@android:color/black"
