--- a/app/src/main/res/layout/item_manage_group.xml
+++ b/app/src/main/res/layout/item_manage_group.xml
@@ -8,7 +8,7 @@
 
     <TextView
         android:id="@+id/name_group_text_view"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="@dimen/item_height"
         android:gravity="center_vertical"
         android:textColor="@android:color/black"
@@ -17,7 +17,7 @@
         tools:text="Name" />
 
     <ToggleButton
-        android:id="@+id/favorite_toggle"
+        android:id="@+id/owner_toggle"
         android:layout_width="@dimen/fav_size"
         android:layout_height="@dimen/fav_size"
         android:layout_alignParentEnd="true"
