--- a/app/src/main/res/menu/record_menu.xml
+++ b/app/src/main/res/menu/record_menu.xml
@@ -2,17 +2,19 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:title="Favorite"
+        android:title="@string/favorite"
         android:id="@+id/favorite"
         android:icon="@drawable/ic_star_white"
         app:showAsAction="always">
     </item>
+
     <item
-        android:title="Delete record"
-        android:id="@+id/deleteRecord">
+        android:title="@string/delete_record"
+        android:id="@+id/delete_record">
     </item>
+
     <item
-        android:title="Share to group"
-        android:id="@+id/shareToGroup">
+        android:title="@string/share_to_group"
+        android:id="@+id/share_group">
     </item>
 </menu>
