--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -13,4 +13,5 @@
     <dimen name="item_height">60dp</dimen>
     <dimen name="default_padding">14dp</dimen>
     <dimen name="fav_size">30dp</dimen>
+    <dimen name="fab_padding">50dp</dimen>
 </resources>
