[BASIC] List Member Group Adapter +Activity

--- a/app/src/main/res/layout/activity_list_group.xml
+++ b/app/src/main/res/layout/activity_list_group.xml
@@ -8,10 +8,12 @@
     tools:context=".ui.listGroup.ListGroupActivity">
 
     <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/app_bar_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:theme="@style/Theme.Passkeeper.AppBarOverlay">
         <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
