--- a/app/src/main/res/layout/activity_list_member_group.xml
+++ b/app/src/main/res/layout/activity_list_member_group.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.group.GroupActivity">
+    tools:context=".ui.listMemberGroup.ListMemberGroupActivity">
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
@@ -28,7 +28,7 @@
         android:layout_height="match_parent"
         android:layout_marginTop="@dimen/item_height"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        tools:listitem="@layout/item_manage_group"/>
+        tools:listitem="@layout/item_member_group"/>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/floatingActionButton"
