--- a/app/src/main/res/layout/activity_list_member_group.xml
+++ b/app/src/main/res/layout/activity_list_member_group.xml
@@ -8,17 +8,18 @@
     tools:context=".ui.listMemberGroup.ListMemberGroupActivity">
 
     <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/app_bar_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:theme="@style/Theme.Passkeeper.AppBarOverlay">
         <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
             app:popupTheme="@style/Theme.Passkeeper.PopupOverlay"
             app:title="Members"
-            app:titleMarginStart="30dp"
-            app:logo="@drawable/ic_arrow_back">
+            app:titleMarginStart="30dp">
         </androidx.appcompat.widget.Toolbar>
     </com.google.android.material.appbar.AppBarLayout>
 
