Delete unused file

--- a/app/src/main/res/navigation/forgot_password_navigation.xml
+++ b/app/src/main/res/navigation/forgot_password_navigation.xml
@@ -8,7 +8,8 @@
     <fragment
         android:id="@+id/enterEmail"
         android:name="com.example.passkeeper.ui.login.fragment.ForgotPassword"
-        android:label="EnterEmail" >
+        android:label="EnterEmail"
+        tools:layout="@layout/enter_email_fragment">
         <action
             android:id="@+id/action_enterEmail_to_verifyCode"
             app:destination="@id/verifyCode" />
